Atlas generation now supports geohash sharding (#119)
* Fixed a comment typo

* Some tweaks to SparkFileHelper

* Removed some redundant code from persistence tools

* WIP fix for geohash support

* Dependencies

* Tentative support for geohash. Tests still broken

* Integration tests now pass

* Removed test dependencies

* Trigger rebuild

* Trigger rebuild 2

* Checkstyle and spotless

* Removed debug logs